welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: not found: value int
  int modA = a % 10;
  ^lastDigit:3: error: not found: value int
  int modB = b % 10;
  ^lastDigit:4: error: not found: value int
  int modC = c % 10;
  ^lastDigit:6: error: not found: value modA
  if (modA == modB || modA == modC || modB == modC)
      ^