welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
  int modA = a % 10;
  int modB = b % 10;
  int modC = c % 10;
   
  if (modA == modB || modA == modC || modB == modC)
    return true;
  else
    return false;
}